src/app/header/header.module.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");

.header {
  width: 100%;
  /*text-align: center;*/
  display: block;
  /*grid-template-columns: minmax(auto, 1fr), minmax(auto, 200px);*/
  /*align-items: center;*/
  /*background-image: url("/images/taustas-peruskoodi_2.jpg");*/
  background-color: rgb(35, 0, 111);
  background-size: cover;
  padding-top: 8vh;
  padding-bottom: 8vh;
  /*background-color:green;*/
}

.headerDiv {
  display: inline-block;
  /*min-width: 500px;*/
  margin-left: 4%;
  margin-right: 0%;
  padding-right: 1%;
  padding-left: 2%;
  /*align-self: right;
    align-items: right;*/
  /*justify-content: right;*/
  text-align: left;
  width: 42%;
  color: #fac023;
  font-family: "Roboto Slab", serif;
  padding-left: 4%;
  font-size: 1.9rem;
  vertical-align: middle;
}

.headerDiv h1 {
  text-transform: uppercase;
  letter-spacing: 1.5rem;
  font-family: "Roboto Slab", serif;
  font-weight: 400;
  text-shadow: 1px 2px 2px #000000;
  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
}

.firstHeader {
  margin-top: 0%;
  margin-bottom: 0%;
  font-size: 1.7rem;
  color: white;
  /*color: #f5af0dc7;*/
}

.firstH {
  margin-top: 0%;
  margin-bottom: 0%;
  /*margin-left: 5%;
    padding-left: 5%;*/
}

.secondH {
  margin-top: 0%;
  /*margin-left: 5%;
    padding-left: 10%;*/
  margin-bottom: 0%;
}

.headerDiv h2 {
  /*padding-left: 20%;*/
  margin-top: 5%;
  font-size: 1.5rem;
  text-shadow: 2px 2px 4px #000000;
  font-weight: 400;
  letter-spacing: 0.5rem;
}

.pictureDiv {
  text-align: center;
  display: inline-block;
  /*max-width: 50%;*/
  width: 47%;
  vertical-align: middle;
}

.image {
  max-width: 70%;
  height: auto;
  /*box-shadow: 2px 2px 5px rgb(14, 14, 71);*/
}

.contactButton {
  background-color: purple;
  color: white;
  padding: 1rem;
  text-align: center;
  margin-left: 15%;
  margin-top: 2rem;
  text-transform: uppercase;
  border: none;
  border-radius: 2rem;
}

.contactButton:hover {
  box-shadow: 0 5px 8px 0 rgba(255, 250, 250, 0.425),
    0 6px 20px 0 rgba(255, 255, 255, 0.137);
}

@media only screen and (max-width: 1020px) {
  .pictureDiv {
    display: none;
  }

  .image {
    display: none;
  }

  .headerDiv {
    display: block;
    margin-left: 0px;
    margin-right: 0px;
    padding-left: 0px;
    padding-right: 0px;

    width: 100%;
    text-align: center;
  }

  .headerDiv h1 {
    padding-left: 0rem;
  }

  .headerDiv h2 {
    padding-left: 0rem;
  }

  .contactButton {
    margin: auto;
    display: block;
    align-items: center;
  }
}

@media only screen and (max-width: 675px) {
  .headerDiv {
    font-size: 0.8rem;
  }

  .headerDiv h1 {
    letter-spacing: 1rem;
  }

  .headerDiv h2 {
    letter-spacing: 1rem;
  }
}

